Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: letsencrypt.yourdomain.com
spec:
  host: letsencrypt.yourdomain.com
  to:
    kind: Service
    name: openshift-letsencrypt
