fqdn-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: www
spec:
  host: letsencrypt.moreorless.be
  to:
    kind: Service
    name: openshift-letsencrypt
